--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "ky": "^1.8.1",
-    "lucide-react": "^0.488.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "react-tooltip": "^5.28.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
