--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "ky": "^1.8.1",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
