--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "react-tooltip": "^5.28.1"
   },
   "devDependencies": {
